# Kvant

./: Features.md  Math  Math.md  README.md
config/: universe.example.json
examples/: daily_diagnostics.cpp
include/kvant/backtest/: multi_asset.hpp
include/kvant/control/: drift.hpp  journal.hpp  online_updates.hpp  self_correction.hpp
include/kvant/execution/: paper_trader.hpp
python/: pyproject.toml
python/kvant_data/: adjust.py  alpha.py  cli.py  config.py  core.py  overlap.py  pipeline.py  store.py  yahoo.py
python/kvant_research/: export_tree.py
python/kvant_research/providers/: common.py  identity.py  norgate.py  sharadar.py
scripts/: run_local.sh
sql/: phase12.sql  phase9_10.sql
src/: descriptive.cpp  diagnostics.cpp  distributions.cpp  stationarity.cpp
src/backtest/: multi_asset.cpp
src/control/: drift.cpp  online_updates.cpp  self_correction.cpp
src/execution/: paper_trader.cpp
src/kvant_console/: alpha.py  api.py  audit.py  avanza.py  cli.py  config.py  data.py  db.py  modeling.py  paper.py  scheduler.py  secrets.py  settings.py
src/models/: tree_model.cpp
src/money/: fixed.cpp
src/monitoring/: experiment.cpp  metrics.cpp  safeguards.cpp
src/operations/: settlement.cpp
src/persistence/: duckdb_store.cpp
src/risk/: osqp_optimizer.cpp  simple_margin.cpp
src/security/: artifact.cpp
src/tax/: sweden.cpp
tests/: control_execution_tests.cpp  integration_test.cpp  monitoring_tests.cpp  stats_tests.cpp  synthetic_golden.cpp  test_core.py  test_e2e.py
web/: package.json
web/src/: main.jsx  style.css
(+15 files in other folders)
