[build-system]
requires=["setuptools>=69"]
build-backend="setuptools.build_meta"
[project]
name="kvant-research"
version="0.3.0"
requires-python=">=3.11"
dependencies=["pandas>=2.2","pyarrow>=15"]
[project.scripts]
kvant-ingest-sharadar="kvant_research.providers.sharadar:main"
kvant-ingest-norgate="kvant_research.providers.norgate:main"
