[build-system]
requires=["setuptools>=69"]
build-backend="setuptools.build_meta"
[project]
name="kvant-data-pipeline"
version="1.0.0"
requires-python=">=3.11"
dependencies=["duckdb>=1.1,<2","pandas>=2.2","pyarrow>=15","yfinance>=0.2","requests>=2.31"]
[project.scripts]
kvant-bootstrap-alpha="kvant_data.cli:bootstrap_alpha"
kvant-update-daily="kvant_data.cli:update_daily"
kvant-bootstrap-yahoo="kvant_data.cli:bootstrap_yahoo"
kvant-rebuild-adjustments="kvant_data.cli:rebuild"
